# resynthesizer

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  gimp-resynthesizer.metainfo.xml  meson.build  meson_options.txt
.github/workflows/: ci-meson.yaml  codeql-analysis.yml  windows-build.yaml
PluginScripts/: Makefile  Makefile.am  Makefile.in  meson.build  plugin-false-color-match.py  plugin-heal-selection.py  plugin-heal-selection.scm  plugin-heal-transparency.py  plugin-heal-transparency.scm  plugin-map-style.py  plugin-map-style.scm  plugin-render-texture.py  plugin-render-texture.scm  plugin-resynth-controls.py  plugin-resynth-enlarge.py  plugin-resynth-enlarge.scm  plugin-resynth-fill-pattern.py  plugin-resynth-fill-pattern.scm  plugin-resynth-sharpen.py  plugin-resynth-sharpen.scm  plugin-resynthesizer-gui.py  plugin-uncrop.py  plugin-uncrop.scm  resynthesizeTest.txt
Test/: testResynth.py
Test/reference_out_images/: enlarge-ufo-input-small.ppm  fillpattern-ufo-input.ppm  heal-ufo-input.ppm  healalphagray-ufo-input-w-alpha-gray.ppm  healgray-wander.ppm  healincludedalpha-ufo-input-w-alpha.ppm  healtransparency-apollo11_w_alpha.ppm  (+16 more)
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
enginePlugin/: README  adaptGimp.c  adaptGimp.h  animate.c  animate.h  byte_sequence.c  byte_sequence.h  debug.c  debug.h  drawable.c  drawable.h  format.c  format.h  meson.build  plugin.c  pluginParams.c  pluginParams.h  resynth-constants.h  resynthesizer.c  resynthesizer.h
help/: Makefile  Makefile.am  Makefile.in
include/: meson.build
lib/: CMakeLists.txt  Makefile.am  adaptSimple.h  bounds.c  bounds.h  brushfire.h  buildSwitchesOLD.h  coordinates.c  coordinates.h  engine.c  engineParams.h  engineTypes2.h  falseColorMatch.h  glibProxy.c  glibProxy.h  imageBuffer.h  imageFormat.c  imageFormat.h  imageFormatIndicies.h  imageSynth.c  imageSynth.h  imageSynthConstants.h  map.c  map.h  mapOps.h  meson.build  orderTarget.h  passes.h  progress.c  progress.h  readme.md  refiner.h  refinerThreaded.h  resynth-vectorized.h  selection.h  stats.c  stats.h  synthesize.h  targetPixels.c  targetPixels.h  (+2 more)
outerPlugins/: meson.build  plug-in-heal-selection.scm  plug-in-heal-transparency.scm  plug-in-map-style.scm  plug-in-render-texture.scm  plug-in-resynth-controls.scm  plug-in-resynth-enlarge.scm  plug-in-resynth-fill-pattern.scm  plug-in-resynth-sharpen.scm  plug-in-uncrop.scm  plugin-heal-selection.scm  plugin-heal-transparency.scm  plugin-map-style.scm  plugin-render-texture.scm  plugin-resynth-controls.scm  plugin-resynth-enlarge.scm  plugin-uncrop.scm  readme.md  resynth-controls.md
outerPlugins/python2/: Makefile.am  meson.build  plugin-heal-selection.py  plugin-heal-transparency.py  plugin-resynth-fill-pattern.py
outerPlugins/scriptfu/: meson.build  readme.md
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  cs.po  es.gmo  es.po  fr.po  install.sh  ja.po  meson.build  pl.po  pt_BR.po  readme.md  resynthesizer-i18n-install.sh  ru.po  tr.po
src/: Makefile  Makefile.am  Makefile.bootchk  Makefile.in  Makefile.synth  README  adaptGimp.h  adaptGimpSimple.h  adaptSimple.h  brushfire.h  buildSwitches.h  engine.c  engine.h  engineParams.c  engineParams.h  engineTypes.h  glibProxy.c  glibProxy.h  imageBuffer.h  imageFormat.c  imageFormat.h  imageSynth.c  imageSynth.h  imageSynthConstants.h  map.c  map.h  mapIndex.h  mapOps.h  matchWeighting.h  meson.build  orderTarget.h  passes.h  plugin-intl.h  refiner.h  refinerThreaded.h  resynth  resynth-constants.h  resynth-gui  resynth-gui.c  resynth-gui.h  (+12 more)
src/.deps/: resynth-gui.Po  resynthesizer.Po
src/resynthesizer/: Makefile.am  adaptGimp.h  adaptParameters.c  debug.c  drawable.c  drawable.h  meson.build  plugin.c  pluginParams.c  pluginParams.h  resynthPDBv2.h  resynthPDBv3.h  resynthesizer.c  resynthesizer.h
src/resynthesizer-gettext/: Makefile.am  resynthesizer-gettext.c
src/resynthesizer-gui/: Makefile.am  resynth-gui.c  resynth-gui.h
test/: meson.build  readme.md  testResynth.py  testSynth.c
test/reference_out_images/: fillpattern-ufo-input.ppm  healalpha-apollo11_w_alpha.ppm  healalphagray-ufo-input-w-alpha-gray.ppm  healaroundrandom-ufo-input.ppm  healtransparency-apollo11_w_alpha.ppm  mapstyleangel-angel_target.ppm  mapstylegraygray-wander.ppm  mapstylergbgray-zap-output-map.ppm  mapstyletoalpha-ufo-input-w-alpha.ppm  resynthtileable-ufo-input.ppm  uncrop-ufo-input.ppm
test/reference_out_images_3/: fillPatternUfoIndexedSepia-ufo-small-indexed-sepia.ppm  fillpattern-ufo-input.ppm  heal-donkey_original.ppm  heal-ufo-input.ppm  healTransparencyUfoIndexedSepia-wilber-small-indexed-alpha.ppm  healUfoHighBitDepth-ufo-small-high-bit-depth.ppm  healUfoIndexedSepia-ufo-small-indexed-sepia.ppm  healalpha-apollo11_w_alpha.ppm  healalphagray-ufo-input-w-alpha-gray.ppm  healaroundrandom-ufo-input.ppm  healgray-wander.ppm  healincludedalpha-ufo-input-w-alpha.ppm  healtransparency-apollo11_w_alpha.ppm  healtransparencyinward-apollo11_w_alpha.ppm  mapStyleUfoIndexedSepiaFromIndexed-ufo-small-indexed-sepia.ppm  mapStyleUfoIndexedSepiaFromRGB-ufo-small-indexed-sepia.ppm  mapstyle-ufo-input.ppm  mapstylealpha-ufo-input.ppm  mapstyleangel-angel_target.ppm  mapstylebrightness-ufo-input.ppm  mapstylegraygray-wander.ppm  mapstylergbgray-zap-output-map.ppm  mapstyletoalpha-ufo-input-w-alpha.ppm  renderTextureUfoIndexedSepia-ufo-small-indexed-sepia.ppm  rendertexture-grass-input.ppm  rendertexture-wilber-small.ppm  resynthSelf-ufo-input.ppm  resynthfull-brick.ppm  resynthfull-donkey_original.ppm  resynthfull-ufo-input.ppm  resynthfull-zap-texture.ppm  resynthtileable-ufo-input.ppm  resynthtwoimages-ufo-input.ppm  uncrop-alpha-anti-erase-wilber-small.ppm  uncrop-alpha-no-anti-erase-wilber-small.ppm  uncrop-ufo-input.ppm  uncropUfoIndexedSepia-ufo-small-indexed-sepia.ppm
vagga/: readme.md  readme.txt  vagga.yaml
(+29 files in other folders)
