## Process this file with automake to produce Makefile.in

## lkk 2011 I hacked this file from gimp-plugin-template/Makefile.am
## I excised BUGS and HACKING and added subdir PluginScripts

SUBDIRS = src help PluginScripts po

EXTRA_DIST = \
	autogen.sh		\
        intltool-extract.in	\
        intltool-merge.in	\
        intltool-update.in

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
