## Process this file with automake to produce Makefile.in

scripts = \
	plugin-heal-selection.scm      \
	plugin-resynth-sharpen.scm     \
	plugin-resynth-enlarge.scm     \
	plugin-uncrop.scm              \
	plugin-render-texture.scm      \
	plugin-map-style.scm           \
	plugin-heal-transparency.scm   \
	plugin-resynth-fill-pattern.scm

resynthscripts_SCRIPTS = $(scripts)

EXTRA_DIST = $(scripts)
